--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "build-node-vertexai",
   "version": "1.0.0",
-  "description": "A simple nodejs app calling vertexai api.",
+  "description": "Next front, Express back, Py API call, Google Vertex AI app.",
   "keywords": [],
 
   "author": "Keming He <keminghe.career@gmail.com>",
@@ -10,13 +10,8 @@
   "main": "index.js",
 
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
 
   "dependencies": {
-    "axios": "^1.6.7",
-    "express": "^4.18.2"
   }
 }
