--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "build-node-vertexai",
   "version": "1.0.0",
-  "description": "Next front, Express back, Py API call, Google Vertex AI app.",
-  "keywords": [],
-
-  "author": "Keming He <keminghe.career@gmail.com>",
-  "license": "MIT",
-
-  "main": "index.js",
-
+  "description": "Next frontend, Express backend, call Py Google Vertex AI API.",
+  "main": "src/index.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-
+  "keywords": [],
+  "author": "Keming He <keminghe.career@gmail.com",
+  "license": "MIT",
   "dependencies": {
+    "child_process": "^1.0.2",
+    "create-next-app": "^14.1.0",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.19",
+    "typescript": "^5.3.3"
   }
 }
