--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "build-node-vertexai",
   "version": "1.0.0",
   "description": "Next frontend, Express backend, call Py Google Vertex AI API.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,6 +21,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
