--- a/package.json
+++ b/package.json
@@ -1,27 +1,54 @@
 {
-  "name": "build-node-vertexai",
+  "name": "build-vertexai-backend",
+  "description": "Express backend app calling (Py) VertexAI API.",
+  "author": "Keming He <keminghe.career@gmail.com>",
   "version": "1.0.0",
-  "description": "Next frontend, Express backend, call Py Google Vertex AI API.",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "Keming He <keminghe.career@gmail.com",
   "license": "MIT",
+  "keywords": [],
+  
+  "main": "dist/index.js",
+
+  "scripts": {
+    "start": "node dist/index.js",
+
+    "build": "npx tsc",
+    "dev": "nodemon src/index.ts",
+
+    "test": "jest tests && pytest tests",
+    "test-node": "jest tests",
+    "test-node:watch": "jest --watch tests",
+    "test-python": "pytest tests",
+
+    "venv:init": "python3 -m venv python/venv",
+    "venv:kill": "deactivate",
+
+    "python:install": "source python/venv/bin/activate && pip install -r requirements.txt"
+  },
+
   "dependencies": {
     "child_process": "^1.0.2",
-    "create-next-app": "^14.1.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2"
   },
+
   "devDependencies": {
+    "@types/chai": "^4.3.11",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
+
+    "chai": "^5.1.0",
+
+    "concurrently": "^8.2.2",
+
+    "cucumber": "^6.0.7",
+    "cucumber-pretty": "^6.0.1",
+    "cucumber-tsflow": "^4.4.1",
+
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
+
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
