--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,23 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "commonJS",
-    "rootDir": "./src",
+    "target": "es6",
+    "module": "commonjs",
+    
     "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
+    "rootDir": "./src",
+
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["./src/*"]
+    },
+
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true
   },
 
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "python", "**/*.(spec|test).ts"]
 }
