Containerized backend and automated build.
Big step forward, next release will be
about Google Cloud integration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,14 +20,12 @@
     "forceConsistentCasingInFileNames": true
   },
 
-  "include": [
-    "src/**/*", 
-    "step-defs/**/*"
-  ],
+  "include": ["src/**/*"],
 
   "exclude": [
     "node_modules", 
     "python", 
-    "**/*.(spec|test).ts"
+    "**/*.(spec|test).ts",
+    "**/*.(step|steps).ts"
   ]
 }
