--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^10.3.1",
+    "@cucumber/cucumber-expressions": "^17.0.2",
+    "@cucumber/gherkin": "^28.0.0",
     "@cucumber/pretty-formatter": "^1.0.0",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "concurrently": "^8.2.2",
-    "cucumber": "^6.0.7",
     "cucumber-tsflow": "^4.4.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
