Removed Python and child_process for security.

--- a/jest.config.json
+++ b/jest.config.json
@@ -15,6 +15,6 @@
 
   "moduleNameMapper": {"^src/(.*)$": "<rootDir>/src/$1"},
 
-  "modulePathIgnorePatterns": ["<rootDir>/python/"]
+  "modulePathIgnorePatterns": ["<rootDir>/dist/"]
 }
 
