--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,19 +13,20 @@
 
     "strict": true,
     "skipLibCheck": true,
+    "noImplicitAny": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
+    "moduleResolution": "node",
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true
   },
 
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*"
+  ],
 
   "exclude": [
-    "node_modules", 
-    "python", 
-    "**/*.(spec|test).ts",
-    "**/*.(step|steps).ts"
+    "node_modules",
+    "step-definitions/**/*"
   ]
 }
